fixed localstorage and added logic for time

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 
 <body>
-  <header class="container">
-    <div class="row">
+  <header class="jumbotron">
+    <div class="container">
       <div class="col">
         <h1 class="display-3">Work Day Scheduler</h1>
         <h3 class="lead display-6">Hello, and Welcome to you work day schedular</h3>
@@ -35,39 +35,39 @@
   </header>
   <div class="container mt-5" id="parent">
     <!-- Timeblocks go here -->
-    <div class="input-group  ">
+    <div class="input-group">
       <div class="input-group-prepend ">
 
         <span class="input-group-text prepend">09:00AM</span>
       </div>
-      <input type="text" class="form-control field" id="9AM">
+      <input type="text" class="form-control field" id="h9">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="nine"><i class="fas fa-save"></i></button>
       <!-- </div> -->
     </div>
-    <div class="input-group ">
+    <div class="input-group">
       <div class="input-group-prepend ">
         <span class="input-group-text prepend">10:00AM</span>
       </div>
-      <input type="text" class="form-control field" id="10AM">
+      <input type="text" class="form-control field" id="h10">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="ten"><i class="fas fa-save"></i></button>
       <!-- </div> -->
     </div>
-    <div class="input-group ">
+    <div class="input-group">
       <div class="input-group-prepend">
         <span class="input-group-text prepend">11:00AM</span>
       </div>
-      <input type="text" class="form-control field" id="11AM">
+      <input type="text" class="form-control field" id="h11">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="eleven"><i class="fas fa-save"></i></button>
       <!-- </div> -->
     </div>
-    <div class="input-group ">
+    <div class="input-group">
       <div class="input-group-prepend">
         <span class="input-group-text prepend">12:00PM</span>
       </div>
-      <input type="text" class="form-control field" id="12PM">
+      <input type="text" class="form-control field" id="h12">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="twelve"><i class="fas fa-save"></i></button>
       <!-- </div> -->
@@ -76,7 +76,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">01:00PM</span>
       </div>
-      <input type="text" class="form-control" id="13PM">
+      <input type="text" class="form-control" id="h13">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="one"><i class="fas fa-save"></i></button>
       <!-- </div> -->
@@ -85,7 +85,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">02:00PM</span>
       </div>
-      <input type="text" class="form-control" id="14PM">
+      <input type="text" class="form-control" id="h14">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="two"><i class="fas fa-save"></i></button>
       <!-- </div> -->
@@ -94,7 +94,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">03:00PM</span>
       </div>
-      <input type="text" class="form-control" id="15PM">
+      <input type="text" class="form-control" id="h15">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="three"><i class="fas fa-save"></i></button>
       <!-- </div> -->
@@ -103,7 +103,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">04:00PM</span>
       </div>
-      <input type="text" class="form-control" id="16PM">
+      <input type="text" class="form-control" id="h16">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="four"><i class="fas fa-save"></i></button>
       <!-- </div> -->
@@ -112,7 +112,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">05:00PM</span>
       </div>
-      <input type="text" class="form-control" id="17PM">
+      <input type="text" class="form-control" id="h17">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="five"><i class="fas fa-save"></i></button>
       <!-- </div> -->
