--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 
 
-<body>
-  <header class="jumbotron">
+<body class="bg-light">
+  <header class="jumbotron bg-dark text-light">
     <div class="container">
       <div class="col">
-        <h1 class="display-3">Work Day Scheduler</h1>
-        <h3 class="lead display-6">Hello, and Welcome to you work day schedular</h3>
-        <h4 class="lead">Today's Date is : <span id="currentDay"></span> </h4>
-        <h5 class="lead"> Current Time : <span id="currentTime"></span></h5>
+        <h1 class="display-2 fw-normal">Work Day Scheduler</h1>
+        <h3 class="lead display-5 fw-normal">Hello, and Welcome to you work day schedular</h3>
+        <h4 class="lead fw-normal">Today's Date is : <span id="currentDay"></span> </h4>
+        <h5 class="lead fw-normal"> Current Time : <span id="currentTime"></span></h5>
 
         <!-- <p id="currentDay" class="lead"></p> -->
       </div>
@@ -36,7 +36,7 @@
   <div class="container mt-5" id="parent">
     <!-- Timeblocks go here -->
     <div class="input-group">
-      <div class="input-group-prepend ">
+      <div class="input-group-prepend">
 
         <span class="input-group-text prepend">09:00AM</span>
       </div>
@@ -76,7 +76,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">01:00PM</span>
       </div>
-      <input type="text" class="form-control" id="h13">
+      <input type="text" class="form-control field" id="h13">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="one"><i class="fas fa-save"></i></button>
       <!-- </div> -->
@@ -85,7 +85,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">02:00PM</span>
       </div>
-      <input type="text" class="form-control" id="h14">
+      <input type="text" class="form-control field" id="h14">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="two"><i class="fas fa-save"></i></button>
       <!-- </div> -->
@@ -94,7 +94,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">03:00PM</span>
       </div>
-      <input type="text" class="form-control" id="h15">
+      <input type="text" class="form-control field" id="h15">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="three"><i class="fas fa-save"></i></button>
       <!-- </div> -->
@@ -103,7 +103,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">04:00PM</span>
       </div>
-      <input type="text" class="form-control" id="h16">
+      <input type="text" class="form-control field" id="h16">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="four"><i class="fas fa-save"></i></button>
       <!-- </div> -->
@@ -112,7 +112,7 @@
       <div class="input-group-prepend">
         <span class="input-group-text prepend">05:00PM</span>
       </div>
-      <input type="text" class="form-control" id="h17">
+      <input type="text" class="form-control field" id="h17">
       <!-- <div class="input-group-append input-group-lg"> -->
       <button type="button" class="btn btn-info saveBtn" id="five"><i class="fas fa-save"></i></button>
       <!-- </div> -->
