--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="col">
         <h1 class="display-2 fw-normal">Work Day Scheduler</h1>
-        <h3 class="lead display-5 fw-normal">Hello, and Welcome to you work day schedular</h3>
+        <h3 class="lead display-5 fw-normal">Hello, and Welcome to your work day schedular</h3>
         <h4 class="lead fw-normal">Today's Date is : <span id="currentDay"></span> </h4>
         <h5 class="lead fw-normal"> Current Time : <span id="currentTime"></span></h5>
 
